--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,6 @@ modules.xml
 .idea/sonarlint
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all
+
+# fxml in target folder
+target/*
