--- a/.gitignore
+++ b/.gitignore
@@ -126,4 +126,4 @@ modules.xml
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all
 
 # fxml in target folder
-target/*
+/target/
